Icon Name Rename

--- a/css/gpicons.css
+++ b/css/gpicons.css
@@ -57,8 +57,8 @@ Creation date: 03/08/2018 12:03
 .gp-graphic-design:before { content: "\f119"; }
 .gp-credit-card:before { content: "\f11a"; }
 .gp-arrows-1:before { content: "\f11b"; }
-.gp-up-arrow:before { content: "\f11c"; }
-.gp-social:before { content: "\f11d"; }
+.gp-like-f:before { content: "\f11c"; }
+.gp-dislike:before { content: "\f11d"; }
 .gp-fast-forward:before { content: "\f11e"; }
 .gp-multimedia:before { content: "\f11f"; }
 .gp-cross-out:before { content: "\f120"; }
@@ -66,14 +66,14 @@ Creation date: 03/08/2018 12:03
 .gp-shape:before { content: "\f122"; }
 .gp-menu-button:before { content: "\f123"; }
 .gp-one-finger-tap:before { content: "\f124"; }
-.gp-favorite-heart-button:before { content: "\f125"; }
 .gp-warning-sign:before { content: "\f126"; }
 .gp-arrows-2:before { content: "\f127"; }
 .gp-transport:before { content: "\f128"; }
 .gp-boat:before { content: "\f129"; }
 .gp-question-list:before { content: "\f12a"; }
-.gp-favorite:before { content: "\f12b"; }
-.gp-favorite-1:before { content: "\f12c"; }
+.gp-star-o:before { content: "\f177"; }
+.gp-star-half:before { content: "\f12b"; }
+.gp-star:before { content: "\f12c"; }
 .gp-medical:before { content: "\f12d"; }
 .gp-technology-2:before { content: "\f12e"; }
 .gp-arrows-3:before { content: "\f12f"; }
@@ -115,9 +115,9 @@ Creation date: 03/08/2018 12:03
 .gp-wallet:before { content: "\f153"; }
 .gp-arrows-9:before { content: "\f154"; }
 .gp-right-arrow:before { content: "\f155"; }
-.gp-arrows-10:before { content: "\f156"; }
-.gp-arrows-11:before { content: "\f157"; }
-.gp-up-arrow-1:before { content: "\f158"; }
+.gp-left-arrow:before { content: "\f156"; }
+.gp-down-arrow:before { content: "\f157"; }
+.gp-up-arrow:before { content: "\f158"; }
 .gp-horizontal-arrows:before { content: "\f159"; }
 .gp-arrows-12:before { content: "\f15a"; }
 .gp-price-tag:before { content: "\f15b"; }
@@ -146,9 +146,9 @@ Creation date: 03/08/2018 12:03
 .gp-server:before { content: "\f172"; }
 .gp-server-1:before { content: "\f173"; }
 .gp-web:before { content: "\f174"; }
-.gp-arrows:before { content: "\f175"; }
-.gp-like:before { content: "\f176"; }
-.gp-favorite-2:before { content: "\f177"; }
+.gp-right-double-arrow:before { content: "\f175"; }
+.gp-heart-o:before { content: "\f176"; }
+.gp-heart:before { content: "\f125"; }
 .gp-signs-2:before { content: "\f178"; }
 .gp-internet:before { content: "\f179"; }
 .gp-web-1:before { content: "\f17a"; }
@@ -220,7 +220,7 @@ Creation date: 03/08/2018 12:03
 .gp-operator:before { content: "\f1bc"; }
 .gp-playstore:before { content: "\f1bd"; }
 .gp-coding:before { content: "\f1be"; }
-.gp-left-arrow:before { content: "\f1bf"; }
+.gp-left-double-arrow:before { content: "\f1bf"; }
 .gp-monitor-1:before { content: "\f1c0"; }
 .gp-antenna:before { content: "\f1c1"; }
 .gp-smartphone-4:before { content: "\f1c2"; }
